# stackr

./: .coverage  .cursorrules  .dockerignore  .gitignore  CURSOR_RULES.md  Dockerfile  ENVIRONMENT_VARIABLES.md  LICENSE  PROJECT_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  PROJECT_ROADMAP.md  README.md  STRATEGIES.md  coverage.xml  docker-compose.override.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  venice-models.json
.github/workflows/: ci.yml  docker-security.yml
__tests__/agent/: agent-execution.test.ts  agent.test.ts
__tests__/core/: greet.test.ts
__tests__/llm/: grok.test.ts  llm-integration.test.ts  llm.test.ts
__tests__/workflows/: bitcoinNews.test.ts
docs/: CI_CD_STRATEGY.md
python/: .gitignore  main.py  run_tests.py  run_with_1password.py  run_workflow.py
python/llm/: __init__.py  base.py  grok_strategy.py  openai_strategy.py  strategies.py
python/tests/: test_bitcoin_news.py  test_main.py  test_strategies.py
python/workflows/: bitcoin_news.py  state.py
scripts/: pre-commit.sh  setup-env.sh  test_docker.sh  test_local.sh
scripts/dev/: run_api.sh  start-testnet.sh
src/: index.ts  llm.ts
src/agent/: Agent.ts  Graph.ts  Node.ts
src/llm/: config.ts  index.ts  model-selection.ts  types.ts
src/llm/strategies/: grok.ts  openai.ts
src/utils/: greet.ts
src/workflows/: bitcoinNews.ts
