[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackr"
version = "1.0.0"
description = "Privacy-first Bitcoin DCA and automated withdrawal system"
authors = [{ name = "Stackr Team", email = "team@stackr.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.0.40",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.5",
  "langchain-groq>=0.0.1",
  "fastapi>=0.104.1",
  "uvicorn>=0.24.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--cov=python",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["python"]
omit = ["python/tests/*", "python/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true
